fix: product labels bug fix on mobile view

--- a/src/views/home/templates/pruduct/Product.scss
+++ b/src/views/home/templates/pruduct/Product.scss
@@ -35,3 +35,13 @@
     }
   }
 }
+
+@media screen and (max-width: 750px) {
+  .product-component  {
+    .description {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 3vmin;
+    }
+  }
+}
